Fixed the alignment issue for multiple dropdowns: licensor

--- a/components/page-licensor/page-licensor.less
+++ b/components/page-licensor/page-licensor.less
@@ -860,3 +860,7 @@ multiple-comments .multiple-comments-parent{
   .marginLeft10{
     margin-left: 10px;
   }
+  
+  .paddingLeft{
+    padding-left: 215px;
+  }
